--- a/.env.dist
+++ b/.env.dist
@@ -1,11 +1,14 @@
-$db_host='localhost';
-$db_port='3306';
-$db_name='dolibarr';
-$db_prefix='doli_';
-$db_user='dolibarr';
-$db_pass='password';
-$host = "ssl://smtp.dreamhost.com";
-$username = "youremail@example.com";
-$password = "your email password";
-$port = "465";
-$email_from = "youremail@example.com";
+DOLIBARR_DB_HOST='localhost'
+DOLIBARR_DB_PORT='3306'
+DOLIBARR_DB_NAME='dolibarr'
+DOLIBARR_DB_PREFIX='doli_'
+DOLIBARR_DB_USER='dolibarr'
+DOLIBARR_DB_PASSWORD='password'
+SMTP_HOST="ssl://smtp.dreamhost.com"
+SMTP_USERNAME="youremail@example.com"
+SMTP_PASSWORD="your email password"
+SMTP_PORT="465"
+FROM_EMAIL="youremail@example.com"
+SUBJECT="Votre adhésion au Cairn"
+#If set everything will be send to this email
+#DEBUG_EMAIL="youremail@example.com"
