--- a/.env.dist
+++ b/.env.dist
@@ -4,10 +4,11 @@ DOLIBARR_DB_NAME='dolibarr'
 DOLIBARR_DB_PREFIX='doli_'
 DOLIBARR_DB_USER='dolibarr'
 DOLIBARR_DB_PASSWORD='password'
-SMTP_HOST="ssl://smtp.dreamhost.com"
+SMTP_HOST="smtp.dreamhost.com"
 SMTP_USERNAME="youremail@example.com"
 SMTP_PASSWORD="your email password"
 SMTP_PORT="465"
+SMTP_AUTH="PLAIN"
 FROM_EMAIL="youremail@example.com"
 SUBJECT="Votre adhésion au Cairn"
 #If set everything will be send to this email
